
[project]
name = "DDPathGenerator"
version = "0.0.1"
authors = [
  { name="Vicente López-Oliva", email="voliva@uji.es" },
]
description = "Tool for analyzing quantum circuits"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/voliva-esp/DDPathGenerator"
Issues = "https://github.com/voliva-esp/DDPathGenerator/issues"


[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]